tests/baselines/reference/constDeclarations-access4.errors.txt
tests/cases/compiler/constDeclarations-access4.ts(6,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(7,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(8,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(9,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(10,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(11,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(12,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(13,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(14,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(15,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(16,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(17,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(19,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(20,3): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(21,5): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(22,5): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(24,7): error TS2540: Cannot assign to 'x' because it is a read-only property.
tests/cases/compiler/constDeclarations-access4.ts(26,3): error TS2540: Cannot assign to 'x' because it is a read-only property.


==== tests/cases/compiler/constDeclarations-access4.ts (18 errors) ====
    declare module M {
        const x: number;
    }
    
    // Errors
    M.x = 1;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x += 2;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x -= 3;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x *= 4;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x /= 5;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x %= 6;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x <<= 7;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x >>= 8;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x >>>= 9;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x &= 10;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x |= 11;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x ^= 12;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    
    M.x++;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    M.x--;
      ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    ++M.x;
        ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    --M.x;
        ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    
    ++((M.x));
          ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    
    M["x"] = 0;
      ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    
    // OK
    var a = M.x + 1;
    
    function f(v: number) { }
    f(M.x);
    
    if (M.x) { }
    
    M.x;
    (M.x);
    
    -M.x;
    +M.x;
    
    M.x.toString();
    